tests/custom/STARIS_2022/operation-type-errors/succ-type-error/stderr.expected
Error:
    succ-type-error.essence:2:20:
  |
2 | such that b = succ([false, true, false])
  |                    ^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "int enum or bool"
	Got: matrix indexed by [int] of bool

cat: *.solution: No such file or directory
